--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@angular/core": "^6.0.0",
     "@angular/forms": "^6.0.0",
     "@angular/http": "^6.0.0",
-    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "bootstrap": "^4.1.3",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "reset-css": "^4.0.1",
     "rxjs": "^6.0.0",
     "web-animations-js": "^2.3.1",
